refactor(gateway): 使用文本块构造兜底响应体